--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
 
 <meta charset="utf-8">
 
+<meta name="google-site-verification" content="2vSL4lfUTDxHugsh2ZvEkKuSuEOThISvXA0G5aedg0k" />
+
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
